# card-game

./: .gitignore  card_gen_gen.py  generate_cards.py  package-lock.json  package.json  pyproject.toml
src/: main.js
src/components/: Actions.vue  Events.vue  Home.vue  cards.json
