[tool.poetry]
name = "card-game"
version = "0.1.0"
description = ""
authors = ["Julian Leucker <leuckerj@gmail.com>"]
readme = "README.md"
packages = [{include = "card_game"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
